--- a/angular.json
+++ b/angular.json
@@ -75,7 +75,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -117,5 +123,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "4aee2497-09aa-4b7b-9b52-246652302437"
   }
 }
